# Hatchit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json  setup.bat  vkinfo.txt
Assets/: TestRootDescriptor.json  testscene.json
Assets/Materials/: CompositionMaterial.json  DeferredMaterial.json  DirectionalLightMaterial.json  FloorMaterial.json  PointLightMaterial.json  TestMaterial.json
Assets/Models/: IcoSphere.dae
Assets/Pipelines/: CompositionPipeline.json  DeferredCombinationPipeline.json  DeferredPipeline.json  DirectionalLightingPipeline.json  PointLightingPipeline.json  SwapchainPipeline.json  TestPipeline.json
Assets/RenderPasses/: CompositionPass.json  DeferredCombinationPass.json  DeferredPass.json  LightingPass.json  SwapchainRenderPass.json  TestRenderPass.json
Assets/RenderTargets/: Composition.json  Compositon.json  DeferredFinal.json  DeferredNormal.json  DeferredPosition.json  DirectionalLighting.json  Lighting.json  ScreenTarget.json  TestRenderTarget.json
Assets/Samplers/: DeferredSampler.json  TestSampler.json
Assets/Scenes/: scenelist.json  testscene.json
Assets/Shaders/: .gitignore  compile.sh  compileCSO.bat  compileSPV.bat  composition.frag  deferred.frag  deferred.vert  deferredCombination.frag.unused  deferredCombination.vert  deferred_FS.spv  deferred_VS.spv  directionalLighting.frag  directionalLighting.vert  fullscreenTri.vert  monkey.frag  monkey.vert  monkey_FS.spv  monkey_VS.spv  pointLighting.frag  pointLighting.vert  raptor.frag  raptor.vert  raptor_FS.spv  raptor_VS.spv  screen.frag  screen.vert  screen_FS.spv  screen_VS.spv  testFrag.glsl  testVert.glsl  tri-frag.spv  tri_FS.glsl  tri_PS.cso  tri_PS.hlsl  tri_VS.cso  tri_VS.glsl  tri_VS.hlsl
Documents/: .~lock.Hatchit_0.1.odt#  Hatchit_0.1.odt
Linux/: CMakeLists.txt  configure.sh
Windows/: CMakeLists.txt  config.bat
Windows/HatchitAudio/: CMakeLists.txt
Windows/HatchitCore/: CMakeLists.txt
Windows/HatchitGame/: CMakeLists.txt
Windows/HatchitGraphics/: CMakeLists.txt
Windows/HatchitImage/: CMakeLists.txt
Windows/HatchitMath/: CMakeLists.txt
Windows/HatchitNetwork/: CMakeLists.txt
Windows/HatchitResource/: CMakeLists.txt
Windows/HatchitScript/: CMakeLists.txt
Windows/HatchitTest/: CMakeLists.txt
cmake/: FindGLFW3.cmake
docs/: Contributing.odt  Hatchit_0.1.odt
doxygen/: master
doxygen/html/: README_8md_source.html  annotated.html  classHatchit_1_1Core_1_1AutoProfile-members.html  classHatchit_1_1Core_1_1AutoProfile.html  classHatchit_1_1Core_1_1BitField-members.html  classHatchit_1_1Core_1_1BitField.html  classHatchit_1_1Core_1_1BitFlag-members.html  classHatchit_1_1Core_1_1BitFlag.html  classHatchit_1_1Core_1_1Debug-members.html  classHatchit_1_1Core_1_1Debug.html  classHatchit_1_1Core_1_1File-members.html  classHatchit_1_1Core_1_1File.html  classHatchit_1_1Core_1_1FileException-members.html  classHatchit_1_1Core_1_1FileException.html  classHatchit_1_1Core_1_1FileException__coll__graph.map  classHatchit_1_1Core_1_1FileException__coll__graph.md5  classHatchit_1_1Core_1_1File__inherit__graph.map  classHatchit_1_1Core_1_1File__inherit__graph.md5  classHatchit_1_1Core_1_1IFile.html  classHatchit_1_1Core_1_1IFile__coll__graph.map  classHatchit_1_1Core_1_1IFile__coll__graph.md5  classHatchit_1_1Core_1_1IFile__inherit__graph.map  classHatchit_1_1Core_1_1IFile__inherit__graph.md5  classHatchit_1_1Core_1_1IJob.html  classHatchit_1_1Core_1_1IJob__inherit__graph.map  classHatchit_1_1Core_1_1IJob__inherit__graph.md5  classHatchit_1_1Core_1_1INIException-members.html  classHatchit_1_1Core_1_1INIException.html  classHatchit_1_1Core_1_1INIException__coll__graph.map  classHatchit_1_1Core_1_1INIException__coll__graph.md5  classHatchit_1_1Core_1_1INISettings-members.html  classHatchit_1_1Core_1_1INISettings.html  classHatchit_1_1Core_1_1INonCopy.html  classHatchit_1_1Core_1_1INonCopy__inherit__graph.map  classHatchit_1_1Core_1_1INonCopy__inherit__graph.md5  classHatchit_1_1Core_1_1ITimer.html  classHatchit_1_1Core_1_1ITimer__inherit__graph.map  classHatchit_1_1Core_1_1ITimer__inherit__graph.md5  classHatchit_1_1Core_1_1Job-members.html  classHatchit_1_1Core_1_1Job.html  (+217 more)
doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  (+50 more)
doxygen/latex/: annotated.tex  classHatchit_1_1Core_1_1AutoProfile.tex  classHatchit_1_1Core_1_1BitField.tex  classHatchit_1_1Core_1_1BitFlag.tex  classHatchit_1_1Core_1_1Debug.tex  classHatchit_1_1Core_1_1File.tex  classHatchit_1_1Core_1_1FileException.tex  classHatchit_1_1Core_1_1FileException__coll__graph.md5  classHatchit_1_1Core_1_1File__inherit__graph.md5  classHatchit_1_1Core_1_1IFile.tex  classHatchit_1_1Core_1_1IFile__coll__graph.md5  classHatchit_1_1Core_1_1IFile__inherit__graph.md5  classHatchit_1_1Core_1_1IJob.tex  classHatchit_1_1Core_1_1IJob__inherit__graph.md5  classHatchit_1_1Core_1_1INIException.tex  classHatchit_1_1Core_1_1INIException__coll__graph.md5  classHatchit_1_1Core_1_1INISettings.tex  classHatchit_1_1Core_1_1INonCopy.tex  classHatchit_1_1Core_1_1INonCopy__inherit__graph.md5  classHatchit_1_1Core_1_1ITimer.tex  classHatchit_1_1Core_1_1ITimer__inherit__graph.md5  classHatchit_1_1Core_1_1Job.tex  classHatchit_1_1Core_1_1Job__coll__graph.md5  classHatchit_1_1Core_1_1Linux_1_1Timer.tex  classHatchit_1_1Core_1_1Linux_1_1Timer__inherit__graph.md5  classHatchit_1_1Core_1_1Profiler.tex  classHatchit_1_1Core_1_1Profiler_1_1Sample.tex  classHatchit_1_1Core_1_1Profiler__inherit__graph.md5  classHatchit_1_1Core_1_1Scheduler.tex  classHatchit_1_1Core_1_1Scheduler__inherit__graph.md5  classHatchit_1_1Core_1_1ScopedThread.tex  classHatchit_1_1Core_1_1ScopedThread__coll__graph.md5  classHatchit_1_1Core_1_1Singleton.tex  classHatchit_1_1Core_1_1Singleton__coll__graph.md5  classHatchit_1_1Core_1_1ThreadsafeQueue.tex  classHatchit_1_1Core_1_1ThreadsafeStack.tex  classHatchit_1_1Core_1_1ThreadsafeVector.tex  classHatchit_1_1Core_1_1Windows_1_1Timer.tex  classHatchit_1_1Core_1_1Windows_1_1Timer__coll__graph.md5  classHatchit_1_1Graphics_1_1Color.tex  (+81 more)
tools/: README.md
